--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
