--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/context/index.tx"
+    "src/app/context/index.tx",
+    "src/app/programs/uiuxdesign"
   ],
   "exclude": ["node_modules"]
 }
