--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.5",
@@ -24,6 +25,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
