--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
@@ -19,7 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
