--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
