--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -19,6 +20,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "next": "14.2.11",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -28,7 +30,8 @@
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
