--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.9.0",
@@ -22,6 +27,7 @@
     "next": "14.2.11",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
